--- a/src/main/resources/com/example/demo1/addword.fxml
+++ b/src/main/resources/com/example/demo1/addword.fxml
@@ -1,26 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXDialog?>
+<?import com.jfoenix.controls.JFXDialogLayout?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.AddWord">
+<StackPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.AddWord">
    <children>
-      <Button layoutX="267.0" layoutY="36.0" mnemonicParsing="false" onAction="#wordAdd" prefHeight="60.0" prefWidth="65.0" text="Add" textFill="#db1212" />
-      <TextArea fx:id="adding" layoutX="45.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
-      <TextArea fx:id="meaning" layoutX="353.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
-      <Label alignment="CENTER" layoutX="112.0" layoutY="57.0" prefHeight="31.0" prefWidth="65.0" text="Word" textFill="#00b345">
-         <font>
-            <Font size="19.0" />
-         </font>
-      </Label>
-      <Label alignment="CENTER" layoutX="406.0" layoutY="57.0" prefHeight="31.0" prefWidth="94.0" text="Meaning" textFill="#00b345">
-         <font>
-            <Font size="19.0" />
-         </font>
-      </Label>
-      <Button layoutX="19.0" layoutY="14.0" mnemonicParsing="false" onAction="#Return" text="&lt;- Back" />
+      <AnchorPane prefHeight="400.0" prefWidth="600.0">
+         <children>
+            <Button layoutX="267.0" layoutY="36.0" mnemonicParsing="false" onAction="#wordAdd" prefHeight="60.0" prefWidth="65.0" text="Add" textFill="#db1212" />
+            <TextArea fx:id="adding" layoutX="45.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
+            <TextArea fx:id="meaning" layoutX="353.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" />
+            <Label alignment="CENTER" layoutX="112.0" layoutY="57.0" prefHeight="31.0" prefWidth="65.0" text="Word" textFill="#00b345">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="406.0" layoutY="57.0" prefHeight="31.0" prefWidth="94.0" text="Meaning" textFill="#00b345">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Label>
+            <Button layoutX="19.0" layoutY="14.0" mnemonicParsing="false" onAction="#Return" text="&lt;- Back" />
+            <JFXButton layoutX="267.0" layoutY="329.0" prefHeight="41.0" prefWidth="72.0" text="testin" />
+         </children>
+      </AnchorPane>
+      <JFXDialog fx:id="dialog">
+         <JFXDialogLayout>
+         <body>
+            <Label>Are you sure you want to add the word?</Label>
+          </body>
+           <actions>
+              <JFXButton fx:id="acceptButton">Accept
+             </JFXButton>
+              <JFXButton fx:id="declineButton">Decline
+              </JFXButton>
+            </actions>
+         </JFXDialogLayout>
+      </JFXDialog>
    </children>
-</AnchorPane>
+</StackPane>
