--- a/src/main/resources/com/example/demo1/history.fxml
+++ b/src/main/resources/com/example/demo1/history.fxml
@@ -1,23 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXDialog?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.History">
+
+<?import com.jfoenix.controls.JFXDialogLayout?>
+<?import com.jfoenix.controls.JFXButton?>
+<StackPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.History">
    <children>
-      <ListView fx:id="searched" layoutX="21.0" layoutY="127.0" prefHeight="259.0" prefWidth="557.0" />
-      <Label fx:id="word" layoutX="76.0" layoutY="20.0" prefHeight="26.0" prefWidth="198.0">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <TextArea fx:id="meaning" editable="false" layoutX="283.0" layoutY="14.0" prefHeight="101.0" prefWidth="301.0" />
-      <Button layoutX="223.0" layoutY="52.0" mnemonicParsing="false" onAction="#DeleteHistory" text="Delete" />
-      <Button layoutX="21.0" layoutY="20.0" mnemonicParsing="false" onAction="#Return" text="Back" />
-      <Button layoutX="226.0" layoutY="89.0" mnemonicParsing="false" onAction="#ClearHistory" text="Clear" textFill="#ed0a0a" />
+      <AnchorPane prefHeight="400.0" prefWidth="600.0">
+         <children>
+            <ListView fx:id="searched" layoutX="21.0" layoutY="127.0" prefHeight="259.0" prefWidth="557.0" />
+            <Label fx:id="word" layoutX="76.0" layoutY="20.0" prefHeight="26.0" prefWidth="198.0">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <TextArea fx:id="meaning" editable="false" layoutX="283.0" layoutY="14.0" prefHeight="101.0" prefWidth="301.0" />
+            <Button layoutX="223.0" layoutY="52.0" mnemonicParsing="false" onAction="#DeleteHistory" text="Delete" />
+            <Button layoutX="21.0" layoutY="20.0" mnemonicParsing="false" onAction="#Return" text="Back" />
+            <Button layoutX="226.0" layoutY="89.0" mnemonicParsing="false" onAction="#ClearHistory" text="Clear" textFill="#ed0a0a" />
+         </children>
+      </AnchorPane>
+      <JFXDialog fx:id="dialog">
+         <JFXDialogLayout>
+            <body>
+               <Label>Are you sure you want to clear the searching history?</Label>
+            </body>
+            <actions>
+               <JFXButton fx:id="acceptButton">Accept
+               </JFXButton>
+               <JFXButton fx:id="declineButton">Decline
+               </JFXButton>
+            </actions>
+         </JFXDialogLayout>
+      </JFXDialog>
    </children>
-</AnchorPane>
+</StackPane>
