--- a/src/main/resources/com/example/demo1/addword.fxml
+++ b/src/main/resources/com/example/demo1/addword.fxml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.AddWord">
    <children>
-      <Button layoutX="406.0" layoutY="139.0" mnemonicParsing="false" onAction="#wordAdd" prefHeight="60.0" prefWidth="65.0" text="Add" textFill="#db1212" />
-      <TextArea fx:id="adding" layoutX="77.0" layoutY="145.0" prefHeight="339.0" prefWidth="275.0" />
-      <TextArea fx:id="meaning" layoutX="523.0" layoutY="144.0" prefHeight="339.0" prefWidth="269.0" />
-      <Label alignment="CENTER" layoutX="182.0" layoutY="78.0" prefHeight="31.0" prefWidth="65.0" text="Word" textFill="#00b345">
+      <JFXTextField fx:id="adding" layoutX="69.0" layoutY="46.0" prefHeight="60.0" prefWidth="501.0" promptText="Enter the word you want to add">
          <font>
-            <Font size="19.0" />
+            <Font size="25.0" />
          </font>
-      </Label>
-      <Label alignment="CENTER" layoutX="620.0" layoutY="79.0" prefHeight="31.0" prefWidth="94.0" text="Meaning" textFill="#00b345">
+      </JFXTextField>
+      <JFXTextArea fx:id="meaning" layoutX="63.0" layoutY="145.0" prefHeight="350.0" prefWidth="745.0" promptText="     Enter the meaning of the word" style="-fx-background-color: #bedbed;">
          <font>
-            <Font size="19.0" />
+            <Font name="Bell MT" size="23.0" />
          </font>
-      </Label>
+      </JFXTextArea>
+      <JFXButton buttonType="RAISED" layoutX="640.0" layoutY="41.0" onAction="#wordAdd" prefHeight="69.0" prefWidth="161.0" style="-fx-background-color: #40e0d0;" text="Confirm" textFill="#7b1a96">
+         <font>
+            <Font name="Californian FB" size="22.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
