--- a/src/main/resources/com/example/demo1/googletranslate.fxml
+++ b/src/main/resources/com/example/demo1/googletranslate.fxml
@@ -3,36 +3,55 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.GTranslate">
    <children>
-      <Button fx:id="change" layoutX="417.0" layoutY="114.0" mnemonicParsing="false" onAction="#Change" text="&lt;-&gt;" />
-      <Label fx:id="label1" layoutX="170.0" layoutY="101.0" text="VN">
+      <Label fx:id="label1" layoutX="266.0" layoutY="62.0" text="VN">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <Label fx:id="label2" layoutX="701.0" layoutY="107.0" text="EN">
+      <Label fx:id="label2" layoutX="725.0" layoutY="62.0" text="EN">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <TextArea fx:id="text1" layoutX="82.0" layoutY="198.0" prefHeight="266.0" prefWidth="200.0" wrapText="true">
+      <TextArea fx:id="text1" layoutX="21.0" layoutY="130.0" prefHeight="385.0" prefWidth="361.0" wrapText="true">
          <font>
             <Font size="17.0" />
          </font>
       </TextArea>
-      <TextArea fx:id="text2" editable="false" layoutX="588.0" layoutY="198.0" prefHeight="266.0" prefWidth="200.0" wrapText="true">
+      <TextArea fx:id="text2" editable="false" layoutX="498.0" layoutY="131.0" prefHeight="385.0" prefWidth="354.0" wrapText="true">
          <font>
             <Font size="17.0" />
          </font>
       </TextArea>
-      <Button fx:id="translate" layoutX="398.0" layoutY="236.0" mnemonicParsing="false" onAction="#Enter" text="Translate">
+      <Button fx:id="translate" layoutX="404.0" layoutY="73.0" mnemonicParsing="false" onAction="#Enter" text="Translate">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
+      <Label layoutX="142.0" layoutY="62.0" text="Translate from:">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+      <Label layoutX="611.0" layoutY="62.0" text="Translate into:">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+      <Button layoutX="397.0" layoutY="305.0" mnemonicParsing="false" onAction="#Change" prefHeight="69.0" prefWidth="87.0" styleClass="switch_button" stylesheets="@../../../style.css">
+         <graphic>
+            <ImageView fitHeight="61.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../picss/466154.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
    </children>
 </AnchorPane>
