--- a/src/main/resources/com/example/demo1/mainui.fxml
+++ b/src/main/resources/com/example/demo1/mainui.fxml
@@ -11,7 +11,7 @@
       <AnchorPane fx:id="root" layoutX="-1.0" layoutY="45.0" prefHeight="532.0" prefWidth="871.0" />
       <AnchorPane prefHeight="45.0" prefWidth="871.0" styleClass="top_panel" stylesheets="@../../../style.css">
          <children>
-            <Button layoutX="837.0" mnemonicParsing="false" onAction="#Exit" prefHeight="29.0" prefWidth="17.0" styleClass="exit_button" stylesheets="@../../../style.css" text="X">
+            <Button layoutX="840.0" layoutY="4.0" mnemonicParsing="false" onAction="#Exit" prefHeight="29.0" prefWidth="17.0" styleClass="exit_button" stylesheets="@../../../style.css" text="X">
                <font>
                   <Font name="System Bold" size="17.0" />
                </font>
