--- a/src/main/resources/com/example/demo1/googletranslate.fxml
+++ b/src/main/resources/com/example/demo1/googletranslate.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -10,42 +11,27 @@
 
 <AnchorPane prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.GTranslate">
    <children>
-      <Label fx:id="label1" layoutX="266.0" layoutY="62.0" text="VN">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label fx:id="label2" layoutX="725.0" layoutY="62.0" text="EN">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <TextArea fx:id="text1" layoutX="21.0" layoutY="130.0" prefHeight="385.0" prefWidth="361.0" wrapText="true">
+      <TextArea fx:id="text1" layoutX="14.0" layoutY="131.0" prefHeight="385.0" prefWidth="354.0" wrapText="true">
          <font>
             <Font size="17.0" />
          </font>
       </TextArea>
-      <TextArea fx:id="text2" editable="false" layoutX="498.0" layoutY="131.0" prefHeight="385.0" prefWidth="354.0" wrapText="true">
+      <TextArea fx:id="text2" editable="false" layoutX="503.0" layoutY="131.0" prefHeight="385.0" prefWidth="354.0" wrapText="true">
          <font>
             <Font size="17.0" />
          </font>
       </TextArea>
-      <Button fx:id="translate" layoutX="404.0" layoutY="73.0" mnemonicParsing="false" onAction="#Enter" text="Translate">
+      <Label layoutX="35.0" layoutY="54.0" text="From : ">
          <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <Label layoutX="142.0" layoutY="62.0" text="Translate from:">
-         <font>
-            <Font size="17.0" />
+            <Font size="26.0" />
          </font>
       </Label>
-      <Label layoutX="611.0" layoutY="62.0" text="Translate into:">
+      <Label layoutX="551.0" layoutY="54.0" text="To :">
          <font>
-            <Font size="17.0" />
+            <Font size="26.0" />
          </font>
       </Label>
-      <Button layoutX="397.0" layoutY="305.0" mnemonicParsing="false" onAction="#Change" prefHeight="69.0" prefWidth="87.0" styleClass="switch_button" stylesheets="@../../../style.css">
+      <Button layoutX="392.0" layoutY="299.0" mnemonicParsing="false" onAction="#Change" prefHeight="69.0" prefWidth="87.0" styleClass="switch_button" stylesheets="@../../../style.css">
          <graphic>
             <ImageView fitHeight="61.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -53,5 +39,20 @@
                </image>
             </ImageView>
          </graphic></Button>
+      <ImageView fx:id="im1" fitHeight="77.0" fitWidth="130.0" layoutX="133.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../picss/eng.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="im2" fitHeight="77.0" fitWidth="130.0" layoutX="616.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../picss/viet.png" />
+         </image>
+      </ImageView>
+      <JFXButton buttonType="RAISED" layoutX="392.0" layoutY="54.0" onAction="#Enter" prefHeight="51.0" prefWidth="87.0" stylesheets="@../../../style.css" text="Search" textFill="#e9fbff">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
