--- a/src/main/resources/alerts.css
+++ b/src/main/resources/alerts.css
@@ -1,34 +1,26 @@
 .dialog-pane{
-    -fx-border-color:black;
+    -fx-border-color:cyan;
     -fx-border-width:2.0px;
 }
-
-/**Costumization of The Bar where the buttons are located**/
 .dialog-pane > .button-bar > .container {
-    -fx-background-color:black;
+    -fx-background-color:pink;
 }
-
 .dialog-pane > .content.label {
-    -fx-padding: 0.5em 0.5em 0.5em 0.5em;
-    -fx-background-color: yellow;
+    /-fx-padding: 0.5em 0.5em 0.5em 0.5em;
+    -fx-background-color: #CE9DEF ;
     -fx-text-fill:black;
     -fx-font-size:15.0px;
 }
 
-/*Costumization of DialogPane Header*/
 .dialog-pane .header-panel {
-    -fx-background-color: black;
+    -fx-background-color: pink;
 }
-
 .dialog-pane .header-panel .label{
-    -fx-background-color: yellow;
+    -fx-background-color: cyan;
     -fx-background-radius:10px;
     -fx-text-fill:black;
     -fx-font-size:15.0px;
 }
-
-
-/**Costumization of Buttons**/
 .dialog-pane .button{
     -fx-background-color:black;
     -fx-text-fill:white;
@@ -36,10 +28,37 @@
     -fx-effect: dropshadow( three-pass-box, yellow, 10.0, 0.0, 0.0, 0.0);
     -fx-cursor:hand;
 }
-
 .dialog-pane .button:hover{
     -fx-background-color:white;
     -fx-text-fill:black;
     -fx-font-weight:bold;
 }
+
+
+.error-pane{
+    -fx-border-color:red;
+    -fx-border-width:2.0px;
+}
+.error-pane > .button-bar > .container {
+    -fx-background-color:#EFCE9D ;
+}
+.error-pane > .content.label {
+/-fx-padding: 0.5em 0.5em 0.5em 0.5em;
+    -fx-background-color: white;
+    -fx-text-fill:black;
+    -fx-font-size:15.0px;
+}
+.error-pane .button{
+    -fx-background-color:black;
+    -fx-text-fill:white;
+    -fx-wrap-text: true;
+    -fx-effect: dropshadow( three-pass-box, yellow, 10.0, 0.0, 0.0, 0.0);
+    -fx-cursor:hand;
+}
+.error-pane .button:hover{
+    -fx-background-color:white;
+    -fx-text-fill:black;
+    -fx-font-weight:bold;
+}
+
 
