--- a/src/main/resources/com/example/demo1/history.fxml
+++ b/src/main/resources/com/example/demo1/history.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,14 +9,25 @@
 
 <AnchorPane prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.History">
    <children>
-      <ListView fx:id="searched" layoutX="23.0" layoutY="212.0" prefHeight="309.0" prefWidth="823.0" />
-      <Label fx:id="word" layoutX="76.0" layoutY="20.0" prefHeight="26.0" prefWidth="198.0">
+      <ListView fx:id="searched" layoutX="62.0" layoutY="222.0" prefHeight="295.0" prefWidth="748.0" />
+      <TextArea fx:id="meaning" editable="false" layoutX="62.0" layoutY="27.0" prefHeight="173.0" prefWidth="534.0" promptText="    Meaning of the word" wrapText="true">
          <font>
-            <Font size="17.0" />
+            <Font name="System Italic" size="17.0" />
+         </font></TextArea>
+      <JFXTextField fx:id="word" editable="false" layoutX="609.0" layoutY="27.0" prefHeight="33.0" prefWidth="229.0" promptText="   Selected word">
+         <font>
+            <Font name="System Italic" size="16.0" />
          </font>
-      </Label>
-      <TextArea fx:id="meaning" editable="false" layoutX="506.0" layoutY="19.0" prefHeight="173.0" prefWidth="326.0" />
-      <Button layoutX="384.0" layoutY="46.0" mnemonicParsing="false" onAction="#DeleteHistory" text="Delete" />
-      <Button layoutX="387.0" layoutY="115.0" mnemonicParsing="false" onAction="#ClearHistory" text="Clear" textFill="#ed0a0a" />
+      </JFXTextField>
+      <JFXButton buttonType="RAISED" layoutX="617.0" layoutY="91.0" onAction="#DeleteHistory" prefHeight="45.0" prefWidth="80.0" styleClass="exit_button" stylesheets="@../../../style.css" text="Delete">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </JFXButton>
+      <JFXButton buttonType="RAISED" layoutX="617.0" layoutY="154.0" onAction="#ClearHistory" prefHeight="45.0" prefWidth="80.0" styleClass="exit_button" stylesheets="@../../../style.css" text="Clear" textFill="#cc2222">
+         <font>
+            <Font name="System Italic" size="15.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
