--- a/src/main/resources/com/example/demo1/synonyms.fxml
+++ b/src/main/resources/com/example/demo1/synonyms.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,31 +9,25 @@
 
 <AnchorPane prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.Synonyms">
     <children>
-
-        <Label fx:id="label1" layoutX="156.0" layoutY="62.0" text="Word">
+        <Label fx:id="label2" layoutX="61.0" layoutY="107.0" text="Synonyms: " textFill="#0033eb">
             <font>
-                <Font size="17.0" />
+                <Font size="21.0" />
             </font>
         </Label>
-        <Label fx:id="label2" layoutX="681.0" layoutY="62.0" text="Synonyms">
+        <TextArea fx:id="text2" editable="false" layoutX="61.0" layoutY="141.0" prefHeight="365.0" prefWidth="749.0" wrapText="true">
             <font>
-                <Font size="17.0" />
-            </font>
-        </Label>
-        <TextArea fx:id="text1" layoutX="77.0" layoutY="129.0" prefHeight="363.0" prefWidth="228.0" wrapText="true">
-            <font>
-                <Font size="17.0" />
+                <Font size="20.0" />
             </font>
         </TextArea>
-        <TextArea fx:id="text2" editable="false" layoutX="551.0" layoutY="127.0" prefHeight="363.0" prefWidth="262.0" wrapText="true">
-            <font>
-                <Font size="17.0" />
-            </font>
-        </TextArea>
-        <Button fx:id="find" layoutX="413.0" layoutY="281.0" mnemonicParsing="false" onAction="#Enter" text="Find">
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Button>
+      <JFXTextField fx:id="text1" layoutX="70.0" layoutY="34.0" prefHeight="37.0" prefWidth="338.0" promptText="   Find your word here">
+         <font>
+            <Font name="Calibri Italic" size="17.0" />
+         </font>
+      </JFXTextField>
+      <JFXButton buttonType="RAISED" layoutX="427.0" layoutY="34.0" onAction="#Enter" prefHeight="37.0" prefWidth="70.0" stylesheets="@../../../style.css" text="Search" textFill="#f7ff83">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </JFXButton>
     </children>
 </AnchorPane>
