--- a/src/main/resources/com/example/demo1/googletranslate.fxml
+++ b/src/main/resources/com/example/demo1/googletranslate.fxml
@@ -9,50 +9,61 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.GTranslate">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.GTranslate">
    <children>
-      <TextArea fx:id="text1" layoutX="14.0" layoutY="131.0" prefHeight="385.0" prefWidth="354.0" wrapText="true">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </TextArea>
-      <TextArea fx:id="text2" editable="false" layoutX="503.0" layoutY="131.0" prefHeight="385.0" prefWidth="354.0" wrapText="true">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </TextArea>
-      <Label layoutX="35.0" layoutY="54.0" text="From : ">
-         <font>
-            <Font size="26.0" />
-         </font>
-      </Label>
-      <Label layoutX="551.0" layoutY="54.0" text="To :">
-         <font>
-            <Font size="26.0" />
-         </font>
-      </Label>
-      <Button layoutX="392.0" layoutY="299.0" mnemonicParsing="false" onAction="#Change" prefHeight="69.0" prefWidth="87.0" styleClass="switch_button" stylesheets="@../../../style.css">
-         <graphic>
-            <ImageView fitHeight="61.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="574.0" fitWidth="888.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../picss/bk5.png" />
+         </image>
+      </ImageView>
+      <AnchorPane layoutX="7.0" prefHeight="532.0" prefWidth="871.0">
+         <children>
+            <TextArea fx:id="text1" layoutX="14.0" layoutY="131.0" prefHeight="385.0" prefWidth="354.0" wrapText="true">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </TextArea>
+            <TextArea fx:id="text2" editable="false" layoutX="503.0" layoutY="131.0" prefHeight="385.0" prefWidth="354.0" wrapText="true">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </TextArea>
+            <Label layoutX="35.0" layoutY="54.0" text="From : ">
+               <font>
+                  <Font size="26.0" />
+               </font>
+            </Label>
+            <Label layoutX="551.0" layoutY="54.0" text="To :">
+               <font>
+                  <Font size="26.0" />
+               </font>
+            </Label>
+            <Button layoutX="392.0" layoutY="299.0" mnemonicParsing="false" onAction="#Change" prefHeight="69.0" prefWidth="87.0" styleClass="switch_button" stylesheets="@../../../style.css">
+               <graphic>
+                  <ImageView fitHeight="61.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../picss/466154.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <ImageView fx:id="im1" fitHeight="77.0" fitWidth="130.0" layoutX="133.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../picss/466154.png" />
+                  <Image url="@../../../picss/eng.png" />
                </image>
             </ImageView>
-         </graphic></Button>
-      <ImageView fx:id="im1" fitHeight="77.0" fitWidth="130.0" layoutX="133.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../picss/eng.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="im2" fitHeight="77.0" fitWidth="130.0" layoutX="616.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../picss/viet.png" />
-         </image>
-      </ImageView>
-      <JFXButton buttonType="RAISED" layoutX="392.0" layoutY="54.0" onAction="#Enter" prefHeight="51.0" prefWidth="87.0" stylesheets="@../../../style.css" text="Search" textFill="#e9fbff">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </JFXButton>
+            <ImageView fx:id="im2" fitHeight="77.0" fitWidth="130.0" layoutX="616.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../picss/viet.png" />
+               </image>
+            </ImageView>
+            <JFXButton buttonType="RAISED" layoutX="392.0" layoutY="54.0" onAction="#Enter" prefHeight="51.0" prefWidth="87.0" stylesheets="@../../../style.css" text="Search" textFill="#e9fbff">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXButton>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
