--- a/src/main/resources/com/example/demo1/history.fxml
+++ b/src/main/resources/com/example/demo1/history.fxml
@@ -4,30 +4,43 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.History">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.History">
    <children>
-      <ListView fx:id="searched" layoutX="62.0" layoutY="222.0" prefHeight="295.0" prefWidth="748.0" />
-      <TextArea fx:id="meaning" editable="false" layoutX="62.0" layoutY="27.0" prefHeight="173.0" prefWidth="534.0" promptText="    Meaning of the word" wrapText="true">
-         <font>
-            <Font name="System Italic" size="17.0" />
-         </font></TextArea>
-      <JFXTextField fx:id="word" editable="false" layoutX="609.0" layoutY="27.0" prefHeight="33.0" prefWidth="229.0" promptText="   Selected word">
-         <font>
-            <Font name="System Italic" size="16.0" />
-         </font>
-      </JFXTextField>
-      <JFXButton buttonType="RAISED" layoutX="617.0" layoutY="91.0" onAction="#DeleteHistory" prefHeight="45.0" prefWidth="80.0" styleClass="exit_button" stylesheets="@../../../style.css" text="Delete">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="617.0" layoutY="154.0" onAction="#ClearHistory" prefHeight="45.0" prefWidth="80.0" styleClass="exit_button" stylesheets="@../../../style.css" text="Clear" textFill="#cc2222">
-         <font>
-            <Font name="System Italic" size="15.0" />
-         </font>
-      </JFXButton>
+      <ImageView fitHeight="541.0" fitWidth="951.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../picss/bk4.png" />
+         </image>
+      </ImageView>
+      <AnchorPane layoutX="-1.0" prefHeight="532.0" prefWidth="871.0">
+         <children>
+            <ListView fx:id="searched" layoutX="62.0" layoutY="222.0" prefHeight="295.0" prefWidth="748.0" />
+            <TextArea fx:id="meaning" editable="false" layoutX="62.0" layoutY="27.0" prefHeight="173.0" prefWidth="534.0" promptText="    Meaning of the word" wrapText="true">
+               <font>
+                  <Font name="System Italic" size="17.0" />
+               </font>
+            </TextArea>
+            <JFXTextField fx:id="word" editable="false" layoutX="609.0" layoutY="27.0" prefHeight="33.0" prefWidth="229.0" promptText="   Selected word">
+               <font>
+                  <Font name="System Italic" size="16.0" />
+               </font>
+            </JFXTextField>
+            <JFXButton buttonType="RAISED" layoutX="617.0" layoutY="91.0" onAction="#DeleteHistory" prefHeight="45.0" prefWidth="80.0" styleClass="exit_button" stylesheets="@../../../style.css" text="Delete">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXButton>
+            <JFXButton buttonType="RAISED" layoutX="617.0" layoutY="154.0" onAction="#ClearHistory" prefHeight="45.0" prefWidth="80.0" styleClass="exit_button" stylesheets="@../../../style.css" text="Clear" textFill="#cc2222">
+               <font>
+                  <Font name="System Italic" size="15.0" />
+               </font>
+            </JFXButton>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
