--- a/src/main/resources/com/example/demo1/synonyms.fxml
+++ b/src/main/resources/com/example/demo1/synonyms.fxml
@@ -4,30 +4,42 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.Synonyms">
-    <children>
-        <Label fx:id="label2" layoutX="61.0" layoutY="107.0" text="Synonyms: " textFill="#0033eb">
-            <font>
-                <Font size="21.0" />
-            </font>
-        </Label>
-        <TextArea fx:id="text2" editable="false" layoutX="61.0" layoutY="141.0" prefHeight="365.0" prefWidth="749.0" wrapText="true">
-            <font>
-                <Font size="20.0" />
-            </font>
-        </TextArea>
-      <JFXTextField fx:id="text1" layoutX="70.0" layoutY="34.0" prefHeight="37.0" prefWidth="338.0" promptText="   Find your word here">
-         <font>
-            <Font name="Calibri Italic" size="17.0" />
-         </font>
-      </JFXTextField>
-      <JFXButton buttonType="RAISED" layoutX="427.0" layoutY="34.0" onAction="#Enter" prefHeight="37.0" prefWidth="70.0" stylesheets="@../../../style.css" text="Search" textFill="#f7ff83">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </JFXButton>
-    </children>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.Synonyms">
+   <children>
+      <ImageView fitHeight="562.0" fitWidth="902.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../picss/bk3.png" />
+         </image>
+      </ImageView>
+      <AnchorPane prefHeight="532.0" prefWidth="871.0">
+         <children>
+            <Label fx:id="label2" layoutX="61.0" layoutY="107.0" text="Synonyms: " textFill="#0033eb">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </Label>
+            <TextArea fx:id="text2" editable="false" layoutX="61.0" layoutY="141.0" prefHeight="365.0" prefWidth="749.0" wrapText="true">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </TextArea>
+            <JFXTextField fx:id="text1" layoutX="70.0" layoutY="34.0" prefHeight="37.0" prefWidth="338.0" promptText="   Find your word here">
+               <font>
+                  <Font name="Calibri Italic" size="17.0" />
+               </font>
+            </JFXTextField>
+            <JFXButton buttonType="RAISED" layoutX="427.0" layoutY="34.0" onAction="#Enter" prefHeight="37.0" prefWidth="70.0" stylesheets="@../../../style.css" text="Search" textFill="#f7ff83">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </JFXButton>
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
