--- a/src/main/resources/com/example/demo1/dict.fxml
+++ b/src/main/resources/com/example/demo1/dict.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.tabs.UI_Dic">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.tabs.UI_Dic">
    <children>
       <ImageView fitHeight="537.0" fitWidth="880.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -40,15 +40,29 @@
                   <Font size="15.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="723.0" layoutY="20.0" onAction="#read" style="-fx-background-color: #03f0d4;" stylesheets="@../../../style.css" text="Read">
+            <JFXButton buttonType="RAISED" contentDisplay="RIGHT" graphicTextGap="2.0" layoutX="699.0" layoutY="20.0" onAction="#read" prefHeight="30.0" prefWidth="84.0" style="-fx-background-color: #03f0d4;" stylesheets="@../../../style.css" text="Read">
                <font>
                   <Font size="15.0" />
                </font>
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="20.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../picss/347794.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="793.0" layoutY="20.0" onAction="#delete" style="-fx-background-color: #03f0d4;" stylesheets="@../../../style.css" text="Delete">
+            <JFXButton buttonType="RAISED" contentDisplay="RIGHT" graphicTextGap="0.0" layoutX="790.0" layoutY="20.0" onAction="#delete" prefHeight="30.0" prefWidth="84.0" style="-fx-background-color: #03f0d4;" stylesheets="@../../../style.css" text="Delete">
                <font>
                   <Font size="15.0" />
                </font>
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="20.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../picss/7693271.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </JFXButton>
          </children>
       </AnchorPane>
