--- a/src/main/resources/com/example/demo1/game3.fxml
+++ b/src/main/resources/com/example/demo1/game3.fxml
@@ -238,5 +238,14 @@
                 </Pane>
             </children>
         </AnchorPane>
+        <Button layoutX="2.0" layoutY="5.0" mnemonicParsing="false" onAction="#Back" styleClass="switch_button" stylesheets="@../../../style.css">
+            <graphic>
+                <ImageView fitHeight="34.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../../../picss/back.png" />
+                    </image>
+                </ImageView>
+            </graphic>
+        </Button>
     </children>
 </AnchorPane>
