--- a/src/main/resources/com/example/demo1/googletranslate.fxml
+++ b/src/main/resources/com/example/demo1/googletranslate.fxml
@@ -7,9 +7,10 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.tabs.GTranslate">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.tabs.GTranslate">
    <children>
       <ImageView fitHeight="574.0" fitWidth="888.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -82,5 +83,14 @@
             </Button>
          </children>
       </AnchorPane>
+      <Pane fx:id="load" layoutX="391.0" layoutY="161.0" prefHeight="125.0" prefWidth="147.0">
+         <children>
+            <ImageView fitHeight="70.0" fitWidth="70.0" layoutX="23.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../picss/load.gif" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
